# avogadrolibs

avogadro/io/: cjsonformat.cpp
avogadro/qtopengl/: activeobjects.cpp  activeobjects.h
avogadro/qtplugins/: CMakeLists.txt
avogadro/qtplugins/coloropacitymap/: CMakeLists.txt  coloropacitymap.cpp  coloropacitymap.h  computehistogram.h  histogramwidget.cpp  histogramwidget.h  qvtkwidget.cpp  qvtkwidget.h
avogadro/qtplugins/surfaces/: surfacedialog.cpp  surfacedialog.h  surfacedialog.ui  surfaces.cpp  surfaces.h
avogadro/vtk/: vtkglwidget.cpp  vtkglwidget.h
